# nonebot-plugin-chatgpt

./: .deepsource.toml  .gitignore  README.md  pyproject.toml
.github/: mergify.yml
nonebot_plugin_chatgpt/: __init__.py  chatgpt.py  config.py  data.py  json_manager.py  utils.py
